--- a/package.json
+++ b/package.json
@@ -9,6 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
-  }
+    "express": "^4.17.1",
+    "jest": "^26.6.3",
+    "uniqid": "^5.2.0"
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tabathambell/note-taker.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/tabathambell/note-taker/issues"
+  },
+  "homepage": "https://github.com/tabathambell/note-taker#readme"
 }
