--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "jest": "^26.6.3",
-    "uniqid": "^5.2.0"
+    "uuid": "^8.3.2"
   },
   "directories": {
     "lib": "lib"
